# KICKBACK

./: README.md
ChattingServer/: CMakeLists.txt
ChattingServer/src/: channel.cpp  channel_list.cpp  chat_message.h  chat_participant.cpp  chat_server.cpp  chat_session.cpp  main.cpp  message.h
ChattingServer/src/channel/: channel.cpp  channel.h  channel_list.cpp  channel_list.h
ChattingServer/src/message/: message.cpp  message.h  message_unit.cpp  message_unit.h
ChattingServer/src/server_config/: chat_server.cpp  chat_server.h
ChattingServer/src/session/: chat_participant.h  chat_session.cpp  chat_session.h
Docs/: README.md
HandleAPK/: settings.gradle.kts
HandleAPK/app/: build.gradle.kts
HandleAPK/app/release/: output-metadata.json
HandleAPK/app/src/main/: AndroidManifest.xml
HandleAPK/gradle/: libs.versions.toml
HandleAPK/gradle/wrapper/: gradle-wrapper.properties
LiveServer/: CMakeLists.txt  chat_client.cpp  chat_server.cpp  msgpack_test.cpp  udp_echo_client.cpp  udp_multi_thread_server.cpp  upd_echo_server.cpp
LiveServer/ServerConfig/: message_handler.cpp  packet.cpp  tcp_connect.cpp
LiveServer/message/: initial.cpp  message_handler.cpp
LiveServer/server/: chat_main.cpp  chat_message.hpp  chat_participant.cpp  chat_room.cpp  chat_server.cpp  chat_session.cpp
LiveServer/server_config/: .gitignore  message_handler.cpp  message_handler.h  message_unit.h  packet.cpp  tcp_connect.cpp
LiveServer/src/: live-server.cpp  live_server.cpp  receiver.cpp  worker.cpp
LiveServer/src/header/: thread-safe-queue.h
LiveServer/src/model/: connection_info_udp.cpp  connection_info_udp.h  message_form.h  session_info_udp.h
LiveServer/src/tcp/: message_handler.cpp  message_handler.h  message_unit.cpp  message_unit.h
LiveServer/src/udp/: receiver.cpp  worker.cpp
LiveServer/src/udp/model/: message_form.h
LiveServer/src/udp/util/: msgpack_util.h  shared_mutex.h  thread_safe_channel.cpp  thread_safe_channel.h  thread_safe_queue.cpp  thread_safe_queue.h
LiveServer/src/util/: msgpack_util.h  shared_mutex.h  thread_safe_channel.h  thread_safe_queue.h
Test/TestServer/: CMakeLists.txt  chat_message.hpp  client_manager.cpp  main.cpp  packet.cpp  tcp_connect.cpp  udp_server.cpp
Test/businessServer/: build.gradle  settings.gradle
Unity/: README.md
Unity/Resources/Animations/: Cat Animation.controller  Cat Animation_Motorbike.controller  Running Cat Animation.controller
Unity/Resources/Canvas/: Lobby Canvas.prefab  Login Canvas.prefab  Slider - Green.prefab  Slider - Red.prefab  Timer BackGround.prefab
Unity/Resources/Characters/: Cat 01.prefab  Cat 06.prefab  Cat 06_Motorbike.prefab  Player 0.prefab  Player 1.prefab  Player 2.prefab  Player 3.prefab  Player 4.prefab  Player 5.prefab  Player 6.prefab  Player 7.prefab  Player 8.prefab  Player 9.prefab  Running Cat 06.prefab
Unity/Resources/Characters/FootBall/: FootBall Player 0.prefab  FootBall Player 1.prefab  FootBall Player 2.prefab  FootBall Player 3.prefab  FootBall Player 4.prefab  FootBall Player 5.prefab  FootBall Player 6.prefab  FootBall Player 7.prefab  FootBall Player 8.prefab  FootBall Player 9.prefab
Unity/Resources/Chatting/: MessageElement.prefab  Scroll View Chat.prefab
Unity/Resources/Karts/: Motorbike Kart.prefab  Race Kart red.prefab  Red Racing Kart.prefab
Unity/Resources/Maps/: Cebu Obastacles.prefab
Unity/Resources/Particles/: BoostFire.prefab  DashParticles_Left .prefab  DashParticles_Right.prefab  LeftSkid.prefab  ParticlesBoostBurst.prefab  RightSkid.prefab  Speed Lines.prefab
Unity/Scences/: Boryeong Track.unity  Cebu Track.unity  FootBall Track 2.unity  FootBall Track.unity  FootBall WaitingRoom.unity  Lobby.unity  Login.unity  Mexico Track.unity  Room.unity  WaitingRoom.unity
Unity/Scripts/: ChatMessage.cs  DataManager.cs  LobbyManager.cs  LoginManager.cs  MakingRoomPopUp.cs  SessionData.cs  SignUpBtn.cs  TCPConnectManager.cs  UserBtnController.cs
Unity/Scripts/Balance/: GameSettings.cs  ResourcesSettings.cs  Settings.cs
Unity/Scripts/FootBall/: BallSound.cs  BlueTeamGoalCheck.cs  FootBallBeforeStarting.cs  FootBallBoosterController.cs  FootBallCameraFollowing.cs  FootBallCountDownController.cs  FootBallPlayerScript.cs  FootBallResultManager.cs  OrangeTeamGoalCheck.cs  ScoreManager.cs  Timer.cs
Unity/Scripts/GroundDetection/: GroundConfig.cs  GroundDetection.cs
Unity/Scripts/Kart/: BoosterController.cs  CameraFollowing.cs  CarController.cs  MoveableDO.cs  PlayerScript.cs  UtilityFunctions.cs  VehicleController.cs  Wheel.cs
Unity/Scripts/Level Design/: Boostpad.cs  ScrollUV.cs  SplashZone.cs
Unity/Scripts/Map/: CheckPointsController.cs  DeadZoneController.cs  FinishLineController.cs  LapController.cs
Unity/Scripts/Mobile/: PlayerScript.cs  VirtualJoyStick.cs
Unity/Scripts/Server/: Command.cs  DataManager.cs  LobbyManager.cs  LoginManager.cs  Message.cs  ResultManager.cs  RoomInfo.cs  TCPConnectManager.cs  User.cs  WaitingRoomManager.cs
Unity/Scripts/Server/BusinessServer/: BusinessManager.cs  Message.cs
Unity/Scripts/UI/: BeforeStarting.cs  CountDownController.cs  LapTimeController.cs  RoomManger.cs  ScrollingRawImage.cs
Unity/Scripts/Utils/: Enums.cs  Layer.cs  ShortAccess.cs  Singleton.cs
WebFrontend/kickback/: config.js  firebase.js  index.html  package-lock.json  package.json  tsconfig.json
WebFrontend/kickback/src/: App.tsx  config.js  main.tsx
WebServer/: .gitignore  build.gradle  settings.gradle
businessServer/: build.gradle
exec/: README.md  dump.sql  포팅매뉴얼.md
kickbackweb/: package-lock.json  package.json
kickbackweb/public/: index.html
kickbackweb/src/: App.tsx  index.tsx
kickbackweb/src/config/: Firebase.js
kickbackweb/src/fonts/: font.css
kickbackweb/src/interface/: UserInterface.tsx
kickbackweb/src/routes/: Community.tsx  ControlIntro.tsx  GameIntro.tsx  Login.tsx  Main.tsx  ModeIntro.tsx  MyPage.tsx  Notice.tsx  RankSoccer.tsx  RankSpeed.tsx  SignUp.tsx
kickbackweb/src/stores/: AuthStore.tsx  NoticStore.tsx  UserStore.tsx
kickbackweb/src/styles/: index.css
kickbackweb/src/utils/: TokenReissue.tsx
(+272 files in other folders)
